@@ -34,7 +34,7 @@
                 "iconUrl": "https://raw.githubusercontent.com/tonesto7/echo-speaks/master/resources/icons/es_actions.png",
                 "published": true,
                 "oAuth": false,
-                "version": "3.6.1.0",
+                "version": "3.6.2.0",
                 "appSettings": {},
                 "appUrl": "smartapps/tonesto7/echo-speaks-actions.src/echo-speaks-actions.groovy",
                 "optional": false
@@ -44,7 +44,7 @@
                 "iconUrl": "https://raw.githubusercontent.com/tonesto7/echo-speaks/master/resources/icons/es_groups.png",
                 "published": true,
                 "oAuth": false,
-                "version": "3.6.1.0",
+                "version": "3.6.2.0",
                 "appSettings": {},
                 "appUrl": "smartapps/tonesto7/echo-speaks-zones.src/echo-speaks-zones.groovy",
                 "optional": false
