@@ -1,6 +1,6 @@
 {
     "versions": {
-        "server": "2.4.0"
+        "server": "2.4.1"
     },
     "notices": []
 }
